@@ -95,6 +95,7 @@
 \input ffile.tex
 \input ffilestr.tex
 \input file.tex
+\input fileconf.tex
 \input fildatob.tex
 \input filedlg.tex
 \input fildrptg.tex
