@@ -217,8 +217,7 @@ All:
 - active mode support in wxFTP (Randall Fox)
 - sped up wxHTTP and wxFTP
 - added wxStringInput/OutputStreams
-- wxSystemSettings::GetMetric now returns -1 for metrics that are not
-  supported, instead of zero.
+- added wxFileConfig::Save(wxOutputStream)
 
 
 All (GUI):
@@ -247,6 +246,8 @@ All (GUI):
 - wx(Choice/List/Note)book controls send CHANG(ED/ING) events in SetSelection
 - it is now possible to create a wxFont with given size in pixels (d2walter)
 - added wxTopLevelWindow::IsActive()
+- wxSystemSettings::GetMetric now returns -1 for metrics that are not
+  supported, instead of zero.
 
 Unix:
 
